[package]
name = "procelio_launcher"
default-run = "procelio_launcher_bin"
version = "0.1.0"
authors = ["Brennan Stein"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "procelio_launcher_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
egui_extras = { version = "0.17.0", features = ["image"] }
image = { version = "0.24", features = ["jpeg", "png"] }
open = "2.1.1"

reqwest = { version = "0.11.10", features = ["blocking", "json"] }
anyhow = "1.0.57"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
rfd = "0.8.2"
[features]
default = ["eframe/persistence", "serde"]

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
