[package]
name = "procelio_launcher"
default-run = "procelio_launcher_bin"
version = "0.1.0"
authors = ["Brennan Stein"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "procelio_launcher_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
egui_extras = { version = "0.17.0", features = ["image"] }
image = { version = "0.24", features = ["jpeg", "png"] }
open = "2.1.1"

reqwest = { version = "0.11.10", features = ["blocking", "json"] }
anyhow = "1.0.57"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
rfd = "0.8.2"
sha2 = "0.10.2"
tempfile = "3.3.0"
regex = "1"
zip = "0.5"
hex = "0.4"
shell-words = "1.1.0"
walkdir = "2"
proceliotool = { version = "0.1.0", path = "../procelio-files/proceliotool" }
[features]
default = ["eframe/persistence", "serde"]

[profile.release]
opt-level = 2 # fast and small wasm

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[build-dependencies]
winres = "0.1"